# Wiki-GRx-Deploy

./: .gitignore  CMakeLists.txt  DEMOS.md  INFO_NLOHMANN.txt  KNOWN_ISSUES.md  README.en.md  README.md  build_lib.sh  config.yaml  config_GR1_T2.yaml  demo.py  demo_calibration.py  demo_move_position.py  demo_print_state.py  demo_rl_stand.py  demo_rl_walk.py  demo_servo_off.py  demo_servo_on.py  demo_set_home.py  demo_set_pid.py  demo_stand.py  fi_fsa.py  fi_fse.py  main.cpp  main.py  main_mp.py  model.json  requirements.txt  robot_data_nlohmann.txt  robot_rcs-0.4.0.7-cp311-cp311-manylinux_2_30_x86_64.whl  robot_rcs_gr-1.9.1.4-cp311-cp311-manylinux_2_30_x86_64.whl  sensor_offset.json  setup.py  utils.py
SonnyStateEstimator/include/: Basics.h  SonnyStateEstimator.h  StateData.h  VelKalmanFilter.h
StateEstimator/include/: StateData.h  StateEstimator.h
config/: config_GR1_T1.yaml  config_GR1_T2.yaml
docs/: DEMOS.md  KNOWN_ISSUES.md  TOOLS.md  rbdl_installation.md
fi_rcs/: fi_flag_state.py  fi_fsa.py  fi_fsa_predefine.py  fi_function_result.py  fi_imu.py  fi_imu_protocol.py  fi_joystick_xbox.py  fi_logger.py
fi_rcs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lib/: demo.py  fi_rcs.pyi
robot_rcs_base/: fi_robot_fftai.py  fi_robot_gr1t1.py  fi_robot_gr1t1_algorithm.py  fi_robot_gr1t1_customize.py  fi_robot_gr1t1_customize_algorithm.py  fi_robot_interface.py  fi_webots_gr1t1.py  parallel_ankle.py
robot_rcs_base.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
robot_rcs_base/config/: config_GR1T1.json  config_GR1T1.yaml
robot_rcs_base/webots/controllers/webots_gr1t1/: .gitignore  webots_gr1t1.py
robot_rcs_base/webots/protos/: GR1T1.proto  Kinect.proto  Robot.urdf
robot_rcs_base/webots/worlds/: .gr1t1.wbproj  gr1t1.wbt
robot_rcs_models/actuators/: mlp_jit_1307e_6_50000.pt  mlp_jit_1307e_8_50000.pt  mlp_jit_361480_8_50000.pt  mlp_jit_601750_8_50000.pt  mlp_jit_601750_8_50000_old.pt  mlp_jit_802050_8_50000.pt
tools/: load_sensor_offset.py  pd_conversion.py
zenoh/: README.md  requirements.txt  robot_client.py  run_server.py  sensor_offset.json
zenoh/config/: config_GR1_T1.yaml  config_GR1_T2.yaml
